second commit and project finished (add redux and unit test)

--- a/app.json
+++ b/app.json
@@ -22,10 +22,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.omekofg.getir"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "515b4211-5b8e-4063-855b-ccd29e94fa4c"
+      }
     }
   }
 }
